Updating logic in interlockingimpl.java